--- a/management-system-react/src/components/layout/basicLayout.module.less
+++ b/management-system-react/src/components/layout/basicLayout.module.less
@@ -1,5 +1,5 @@
 .header {
-    background-color: #FFF;
+    background-color: var(--color-layout-bg);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -7,7 +7,13 @@
 }
 
 .mainContent {
-    padding: 16px;
+    margin: 16px;
+    background-color: var(--color-layout-bg);
+}
+
+.contentWrapper {
+    flex: 1;
+    display: flex;
 }
 
 .logo {
