--- a/management-system-react/src/components/layout/basicLayout.module.less
+++ b/management-system-react/src/components/layout/basicLayout.module.less
@@ -5,6 +5,8 @@
     align-items: center;
     padding-left: 20px;
     height: var(--layout-header-height);
+    box-shadow: 1px 0 3px #CCC;;
+    position: relative;
 }
 
 .mainContent {
@@ -18,6 +20,7 @@
     flex: 1;
     overflow: auto;
     padding-top: 16px;
+    background-color: var(--color-layout-bg);
 }
 
 .logo {
@@ -38,8 +41,4 @@
     height: 20px;
     cursor: pointer;
     visibility: hidden;
-}
-
-.avatar {
-    background-color: var(--primary-color);
 }
